--- a/index.html
+++ b/index.html
@@ -243,6 +243,9 @@
                     <!-- Customize redirect -->
                     <input type="hidden" name="_next" value="https://reformei.co/obrigado.html">
                     
+                    <!-- Email Subject -->
+                    <input type="hidden" name="_subject" value="Nova solicitação de orçamento - Reformei.co">
+                    
                     <div class="form-group">
                         <input type="text" id="name" name="name" placeholder="Nome completo" required>
                     </div>
