--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
     <meta property="og:image" content="https://www.reformei.com.br/images/og-image.jpg">
     <title>Reformei | Reformas de Alto Padrão</title>
     
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@seuperfildotwitter"> <!-- Opcional: Substitua pelo seu @ do Twitter -->
+    <meta name="twitter:title" content="Reformei | Reformas de Alto Padrão">
+    <meta name="twitter:description" content="Transforme seu espaço com qualidade e sofisticação. Especialistas em reformas de alto padrão para casas e apartamentos.">
+    <meta name="twitter:image" content="https://www.reformei.com.br/images/og-image.jpg">
+    
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
@@ -61,7 +68,7 @@
                         </label>
                     </div>
                     <div class="mobile-menu-icon">
-                        <i class="fas fa-bars"></i>
+                        <i class="fas fa-bars" aria-label="Abrir menu"></i>
                     </div>
                 </div>
             </nav>
@@ -216,10 +223,10 @@
                         </div>
                     </div>
                     <div class="embla__buttons">
-                        <button class="embla__button embla__button--prev">
+                        <button class="embla__button embla__button--prev" aria-label="Anterior">
                             <i class="fas fa-chevron-left"></i>
                         </button>
-                        <button class="embla__button embla__button--next">
+                        <button class="embla__button embla__button--next" aria-label="Próximo">
                             <i class="fas fa-chevron-right"></i>
                         </button>
                     </div>
