--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="preload" href="styles.css" as="style">
     <link rel="preload" href="fonts/Reross_Quadratic.otf" as="font" type="font/otf" crossorigin>
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" as="style">
+    <link rel="preload" href="images/background.jpg" as="image">
     
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
