--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     
     <!-- Preload critical resources -->
     <link rel="preload" href="styles.css" as="style">
-    <link rel="preload" href="fonts/Reross_Quadratic.otf" as="font" type="font/otf" crossorigin>
+    <link rel="preload" href="./fonts/Reross_Quadratic.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="images/background.jpg" as="image">
     
     <!-- Twitter Card Meta Tags -->
