--- a/index.html
+++ b/index.html
@@ -34,6 +34,32 @@
     <meta name="msapplication-TileColor" content="#23CF65">
     <meta name="theme-color" content="#ffffff">
     
+    <style>
+        @font-face {
+            font-family: 'Reross Quadratic';
+            src: url('./fonts/Reross_Quadratic.woff2') format('woff2'),
+                 url('./fonts/Reross_Quadratic.otf') format('opentype'); /* Fallback */
+            font-weight: normal;
+            font-style: normal;
+            font-display: swap;
+            unicode-range: U+000-5FF;
+        }
+        .logo h1 {
+            font-size: 2rem;
+            font-weight: 400;
+            color: var(--primary);
+            font-family: 'Reross Quadratic', 'Poppins', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            margin: 0;
+            white-space: nowrap;
+            line-height: 1;
+            transition: color 0.3s ease;
+        }
+        /* Include dark mode style for logo h1 if applicable and simple */
+        [data-theme="dark"] .logo h1 {
+             color: var(--primary);
+        }
+    </style>
+    
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
