aplicação de imagens

--- a/index.html
+++ b/index.html
@@ -217,51 +217,79 @@
                                 <div class="before-after">
                                     <div class="before">
                                         <span>Antes</span>
-                                        <div class="img-placeholder"></div>
+                                        <img src="images/Antes e depois/1- sala comercial paulista/antes.jpg" alt="Sala comercial Paulista - Antes">
                                     </div>
                                     <div class="after">
                                         <span>Depois</span>
-                                        <div class="img-placeholder"></div>
+                                        <img src="images/Antes e depois/1- sala comercial paulista/depois.jpg" alt="Sala comercial Paulista - Depois">
                                     </div>
                                 </div>
-                                <h3>Apartamento Vila Madalena</h3>
-                                <p>Reforma completa com ampliação da sala e cozinha integrada</p>
+                                <h3>Sala Comercial Paulista</h3>
+                                <p>Transformação completa de espaço comercial</p>
                             </div>
                             <div class="embla__slide">
                                 <div class="before-after">
                                     <div class="before">
                                         <span>Antes</span>
-                                        <div class="img-placeholder"></div>
+                                        <img src="images/Antes e depois/2-Apartamento perdizes - reforma completa - fabiana oliveira/antes.jpg" alt="Apartamento Perdizes - Antes">
                                     </div>
                                     <div class="after">
                                         <span>Depois</span>
-                                        <div class="img-placeholder"></div>
+                                        <img src="images/Antes e depois/2-Apartamento perdizes - reforma completa - fabiana oliveira/depois.jpg" alt="Apartamento Perdizes - Depois">
                                     </div>
                                 </div>
-                                <h3>Casa Jardins</h3>
-                                <p>Modernização completa com novo layout e automação residencial</p>
+                                <h3>Apartamento Perdizes</h3>
+                                <p>Reforma completa com design moderno</p>
                             </div>
                             <div class="embla__slide">
                                 <div class="before-after">
                                     <div class="before">
                                         <span>Antes</span>
-                                        <div class="img-placeholder"></div>
+                                        <img src="images/Antes e depois/3- brás/Antes.jpg" alt="Projeto Brás - Antes">
                                     </div>
                                     <div class="after">
                                         <span>Depois</span>
-                                        <div class="img-placeholder"></div>
+                                        <img src="images/Antes e depois/3- brás/Depois.jpg" alt="Projeto Brás - Depois">
                                     </div>
                                 </div>
-                                <h3>Banheiro Conceito</h3>
-                                <p>Transformação de banheiro tradicional em spa moderno</p>
+                                <h3>Projeto Brás</h3>
+                                <p>Renovação completa de espaço comercial</p>
+                            </div>
+                            <div class="embla__slide">
+                                <div class="before-after">
+                                    <div class="before">
+                                        <span>Antes</span>
+                                        <img src="images/Antes e depois/4- Vila mariana/antes.jpg" alt="Vila Mariana - Antes">
+                                    </div>
+                                    <div class="after">
+                                        <span>Depois</span>
+                                        <img src="images/Antes e depois/4- Vila mariana/depois.jpg" alt="Vila Mariana - Depois">
+                                    </div>
+                                </div>
+                                <h3>Vila Mariana</h3>
+                                <p>Transformação residencial completa</p>
+                            </div>
+                            <div class="embla__slide">
+                                <div class="before-after">
+                                    <div class="before">
+                                        <span>Antes</span>
+                                        <img src="images/Antes e depois/5- predio comercial paulista/antes.jpg" alt="Prédio Comercial Paulista - Antes">
+                                    </div>
+                                    <div class="after">
+                                        <span>Depois</span>
+                                        <img src="images/Antes e depois/5- predio comercial paulista/depois.jpg" alt="Prédio Comercial Paulista - Depois">
+                                    </div>
+                                </div>
+                                <h3>Prédio Comercial Paulista</h3>
+                                <p>Modernização completa de fachada e espaços internos</p>
                             </div>
                         </div>
                     </div>
                     <div class="embla__buttons">
-                        <button class="embla__button embla__button--prev" aria-label="Anterior">
+                        <button class="embla__button embla__button--prev" aria-label="Previous slide">
                             <i class="fas fa-chevron-left"></i>
                         </button>
-                        <button class="embla__button embla__button--next" aria-label="Próximo">
+                        <button class="embla__button embla__button--next" aria-label="Next slide">
                             <i class="fas fa-chevron-right"></i>
                         </button>
                     </div>
@@ -322,22 +350,37 @@
                 <div class="partners-carousel">
                     <div class="partners-track">
                         <div class="partner">
-                            <div class="partner-logo"></div>
+                            <img src="images/Parceiros/ana burgos.jpeg" alt="Ana Burgos" class="partner-logo">
                         </div>
                         <div class="partner">
-                            <div class="partner-logo"></div>
+                            <img src="images/Parceiros/wall arts.png" alt="Wall Arts" class="partner-logo">
                         </div>
                         <div class="partner">
-                            <div class="partner-logo"></div>
+                            <img src="images/Parceiros/todeschini.webp" alt="Todeschini" class="partner-logo">
                         </div>
                         <div class="partner">
-                            <div class="partner-logo"></div>
+                            <img src="images/Parceiros/salvabras.png" alt="Salvabras" class="partner-logo">
                         </div>
                         <div class="partner">
-                            <div class="partner-logo"></div>
+                            <img src="images/Parceiros/reformar.jpg" alt="Reformar" class="partner-logo">
                         </div>
                         <div class="partner">
-                            <div class="partner-logo"></div>
+                            <img src="images/Parceiros/gesso.png" alt="Gesso" class="partner-logo">
+                        </div>
+                        <div class="partner">
+                            <img src="images/Parceiros/eletricos.jpg" alt="Elétricos" class="partner-logo">
+                        </div>
+                        <div class="partner">
+                            <img src="images/Parceiros/edielson hidraulica.jpg" alt="Edielson Hidráulica" class="partner-logo">
+                        </div>
+                        <div class="partner">
+                            <img src="images/Parceiros/VVictorious Glass.jpg" alt="Victorious Glass" class="partner-logo">
+                        </div>
+                        <div class="partner">
+                            <img src="images/Parceiros/Leroy_Merlin.svg.png" alt="Leroy Merlin" class="partner-logo">
+                        </div>
+                        <div class="partner">
+                            <img src="images/Parceiros/Casa mansour.jpg" alt="Casa Mansour" class="partner-logo">
                         </div>
                     </div>
                 </div>
