--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
                 <div class="partners-carousel">
                     <div class="partners-track">
                         <div class="partner">
-                            <img src="images/Parceiros/ana burgos.jpeg" alt="Ana Burgos" class="partner-logo">
+                            <img src="images/Parceiros/ana burgos.jpg" alt="Ana Burgos" class="partner-logo">
                         </div>
                         <div class="partner">
                             <img src="images/Parceiros/wall arts.png" alt="Wall Arts" class="partner-logo">
@@ -365,7 +365,7 @@
                             <img src="images/Parceiros/reformar.jpg" alt="Reformar" class="partner-logo">
                         </div>
                         <div class="partner">
-                            <img src="images/Parceiros/gesso.png" alt="Gesso" class="partner-logo">
+                            <img src="images/Parceiros/ar gesso.png" alt="Gesso" class="partner-logo">
                         </div>
                         <div class="partner">
                             <img src="images/Parceiros/eletricos.jpg" alt="Elétricos" class="partner-logo">
@@ -374,13 +374,13 @@
                             <img src="images/Parceiros/edielson hidraulica.jpg" alt="Edielson Hidráulica" class="partner-logo">
                         </div>
                         <div class="partner">
-                            <img src="images/Parceiros/VVictorious Glass.jpg" alt="Victorious Glass" class="partner-logo">
+                            <img src="images/Parceiros/victorious glass.jpg" alt="Victorious Glass" class="partner-logo">
                         </div>
                         <div class="partner">
-                            <img src="images/Parceiros/Leroy_Merlin.svg.png" alt="Leroy Merlin" class="partner-logo">
+                            <img src="images/Parceiros/leroy merlin.png" alt="Leroy Merlin" class="partner-logo">
                         </div>
                         <div class="partner">
-                            <img src="images/Parceiros/Casa mansour.jpg" alt="Casa Mansour" class="partner-logo">
+                            <img src="images/Parceiros/casa mansur.jpg" alt="Casa Mansour" class="partner-logo">
                         </div>
                     </div>
                 </div>
@@ -427,23 +427,43 @@
                 <div class="team-grid">
                     <div class="team-member">
                         <div class="member-photo"></div>
-                        <h3>Ana Oliveira</h3>
-                        <p>Arquiteta Chefe</p>
+                        <h3>Alex Braceiro</h3>
+                        <p>Comercial</p>
                     </div>
                     <div class="team-member">
                         <div class="member-photo"></div>
-                        <h3>Carlos Santos</h3>
-                        <p>Engenheiro Civil</p>
+                        <h3>Fabiana Oliveira</h3>
+                        <p>Arquiteta</p>
                     </div>
                     <div class="team-member">
                         <div class="member-photo"></div>
-                        <h3>Mariana Costa</h3>
-                        <p>Designer de Interiores</p>
+                        <h3>Ana Burgos</h3>
+                        <p>Arquiteta</p>
                     </div>
                     <div class="team-member">
                         <div class="member-photo"></div>
-                        <h3>Roberto Almeida</h3>
-                        <p>Gerente de Projetos</p>
+                        <h3>Ricardo Coelho</h3>
+                        <p>TI e IA</p>
+                    </div>
+                    <div class="team-member">
+                        <div class="member-photo"></div>
+                        <h3>Fred Sekkel</h3>
+                        <p>Diretor de Marketing</p>
+                    </div>
+                    <div class="team-member">
+                        <div class="member-photo"></div>
+                        <h3>Victória Macedo</h3>
+                        <p>Gestora Financeira</p>
+                    </div>
+                    <div class="team-member">
+                        <div class="member-photo"></div>
+                        <h3>Rafael Kenzo</h3>
+                        <p>Conselheiro Financeiro</p>
+                    </div>
+                    <div class="team-member">
+                        <div class="member-photo"></div>
+                        <h3>Marcos Pinheiro</h3>
+                        <p>Coordenador de Obra</p>
                     </div>
                 </div>
             </div>
