--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
     </style>
     
     <!-- Non-critical CSS -->
-    <link rel="stylesheet" href="styles.min.css" media="print" onload="this.media='all'">
-    <noscript><link rel="stylesheet" href="styles.min.css"></noscript>
+    <link rel="stylesheet" href="styles.css" media="print" onload="this.media='all'">
+    <noscript><link rel="stylesheet" href="styles.css"></noscript>
     
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -98,7 +98,7 @@
     <!-- Deferred Scripts -->
     <script src="https://unpkg.com/scrollreveal" defer></script>
     <script src="https://unpkg.com/embla-carousel/embla-carousel.umd.js" defer></script>
-    <script src="script.min.js" defer></script>
+    <script src="script.js" defer></script>
 </head>
 <body>
     <header>
