--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
                     <div class="team-member">
                         <div class="member-photo"></div>
                         <h3>Ricardo Coelho</h3>
-                        <p>TI e IA</p>
+                        <p>Diretor de TI</p>
                     </div>
                     <div class="team-member">
                         <div class="member-photo"></div>
