--- a/index.html
+++ b/index.html
@@ -479,37 +479,37 @@
                 
                 <div class="team-grid">
                     <div class="team-member">
-                        <div class="member-photo"></div>
+                        <div class="member-photo" style="background-image: url('images/equipe/alex.jpg');"></div>
                         <h3>Alex Braceiro</h3>
                         <p>Comercial</p>
                     </div>
                     <div class="team-member">
-                        <div class="member-photo"></div>
+                        <div class="member-photo" style="background-image: url('images/equipe/fabiana.jpg');"></div>
                         <h3>Fabiana Oliveira</h3>
                         <p>Arquiteta</p>
                     </div>
                     <div class="team-member">
-                        <div class="member-photo"></div>
+                        <div class="member-photo" style="background-image: url('images/equipe/ana.jpg');"></div>
                         <h3>Ana Burgos</h3>
                         <p>Arquiteta</p>
                     </div>
                     <div class="team-member">
-                        <div class="member-photo"></div>
+                        <div class="member-photo" style="background-image: url('images/equipe/ricardo.jpg');"></div>
                         <h3>Ricardo Coelho</h3>
                         <p>Diretor de TI</p>
                     </div>
                     <div class="team-member">
-                        <div class="member-photo"></div>
+                        <div class="member-photo" style="background-image: url('images/equipe/fred.jpg');"></div>
                         <h3>Fred Sekkel</h3>
                         <p>Diretor de Marketing</p>
                     </div>
                     <div class="team-member">
-                        <div class="member-photo"></div>
+                        <div class="member-photo" style="background-image: url('images/equipe/victoria.jpg');"></div>
                         <h3>Victória Macedo</h3>
                         <p>Gestora Financeira</p>
                     </div>
                     <div class="team-member">
-                        <div class="member-photo"></div>
+                        <div class="member-photo" style="background-image: url('images/equipe/marcos.jpg');"></div>
                         <h3>Marcos Pinheiro</h3>
                         <p>Coordenador de Obra</p>
                     </div>
