--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
                             <i class="fas fa-map-marker-alt"></i>
                             <div>
                                 <h3>Endereço</h3>
-                                <p>Av. Paulista, 1000 - São Paulo, SP</p>
+                                <p>Av. Paulista, 1754 sala 155 - São Paulo, SP</p>
                             </div>
                         </div>
                         <div class="info-item">
@@ -546,9 +546,8 @@
                         </div>
                         <div class="social-media">
                             <a href="https://www.instagram.com/reformei.co/" target="_blank" class="social-icon" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                            <a href="#" class="social-icon" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
-                            <a href="#" class="social-icon" aria-label="Pinterest"><i class="fab fa-pinterest"></i></a>
-                            <a href="#" class="social-icon" aria-label="Houzz"><i class="fab fa-houzz"></i></a>
+                            <a href="https://br.pinterest.com/reformei_co/" target="_blank" class="social-icon" aria-label="Pinterest"><i class="fab fa-pinterest-p"></i></a>
+                            <a href="#" target="_blank" class="social-icon" aria-label="TikTok"><i class="fab fa-tiktok"></i></a>
                         </div>
                     </div>
                     <div class="contact-map">
