--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
                         </div>
                     </div>
                     <div class="contact-map">
-                        <div class="map-placeholder"></div>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.3272906063035!2d-46.65700148844959!3d-23.55658396330749!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce59e81007f139%3A0x25d2b1d752bfac7c!2sAv.%20Paulista%2C%201754%20-%20Bela%20Vista%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2001310-200%2C%20Brazil!5e0!3m2!1sen!2sus!4v1707930846717!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                 </div>
             </div>
