--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                                 <div class="before-after">
                                     <div class="before">
                                         <span>Antes - Sala</span>
-                                        <img src="images/Antes e depois/1- sala comercial paulista/antes-sala.jpg" 
+                                        <img src="images/aed/paulista/antes-sala.jpg" 
                                              alt="Sala comercial Paulista - Antes Sala"
                                              loading="lazy"
                                              width="600"
@@ -251,7 +251,7 @@
                                     </div>
                                     <div class="after">
                                         <span>Depois - Sala</span>
-                                        <img src="images/Antes e depois/1- sala comercial paulista/depois-sala.jpg" 
+                                        <img src="images/aed/paulista/depois-sala.jpg" 
                                              alt="Sala comercial Paulista - Depois Sala"
                                              loading="lazy"
                                              width="600"
@@ -271,7 +271,7 @@
                                                 <div class="before-after">
                                                     <div class="before">
                                                         <span>Antes - Sala</span>
-                                                        <img src="images/Antes e depois/2-Apartamento perdizes - reforma completa - fabiana oliveira/antes-sala.jpg" 
+                                                        <img src="images/aed/perdizes/antes-sala.jpg" 
                                                              alt="Apartamento Perdizes - Antes Sala"
                                                              loading="lazy"
                                                              width="600"
@@ -280,7 +280,7 @@
                                                     </div>
                                                     <div class="after">
                                                         <span>Depois - Sala</span>
-                                                        <img src="images/Antes e depois/2-Apartamento perdizes - reforma completa - fabiana oliveira/depois-sala.jpg" 
+                                                        <img src="images/aed/perdizes/depois-sala.jpg" 
                                                              alt="Apartamento Perdizes - Depois Sala"
                                                              loading="lazy"
                                                              width="600"
@@ -294,7 +294,7 @@
                                                 <div class="before-after">
                                                     <div class="before">
                                                         <span>Antes - Cozinha</span>
-                                                        <img src="images/Antes e depois/2-Apartamento perdizes - reforma completa - fabiana oliveira/antes-cozinha.jpg" 
+                                                        <img src="images/aed/perdizes/antes-cozinha.jpg" 
                                                              alt="Apartamento Perdizes - Antes Cozinha"
                                                              loading="lazy"
                                                              width="600"
@@ -303,7 +303,7 @@
                                                     </div>
                                                     <div class="after">
                                                         <span>Depois - Cozinha</span>
-                                                        <img src="images/Antes e depois/2-Apartamento perdizes - reforma completa - fabiana oliveira/depois-cozinha.jpg" 
+                                                        <img src="images/aed/perdizes/depois-cozinha.jpg" 
                                                              alt="Apartamento Perdizes - Depois Cozinha"
                                                              loading="lazy"
                                                              width="600"
@@ -317,7 +317,7 @@
                                                 <div class="before-after">
                                                     <div class="before">
                                                         <span>Antes - Banheiro</span>
-                                                        <img src="images/Antes e depois/2-Apartamento perdizes - reforma completa - fabiana oliveira/antes-banheiro.jpg" 
+                                                        <img src="images/aed/perdizes/antes-banheiro.jpg" 
                                                              alt="Apartamento Perdizes - Antes Banheiro"
                                                              loading="lazy"
                                                              width="600"
@@ -326,7 +326,7 @@
                                                     </div>
                                                     <div class="after">
                                                         <span>Depois - Banheiro</span>
-                                                        <img src="images/Antes e depois/2-Apartamento perdizes - reforma completa - fabiana oliveira/depois-banheiro.jpg" 
+                                                        <img src="images/aed/perdizes/depois-banheiro.jpg" 
                                                              alt="Apartamento Perdizes - Depois Banheiro"
                                                              loading="lazy"
                                                              width="600"
@@ -414,10 +414,10 @@
                 <div class="partners-carousel">
                     <div class="partners-track">
                         <div class="partner">
-                            <img src="images/Parceiros/ana burgos.jpg" alt="Ana Burgos" class="partner-logo">
+                            <img src="images/Parceiros/arquiteta.jpg" alt="Ana Burgos" class="partner-logo">
                         </div>
                         <div class="partner">
-                            <img src="images/Parceiros/wall arts.png" alt="Wall Arts" class="partner-logo">
+                            <img src="images/Parceiros/art.png" alt="Wall Arts" class="partner-logo">
                         </div>
                         <div class="partner">
                             <img src="images/Parceiros/todeschini.webp" alt="Todeschini" class="partner-logo">
@@ -429,22 +429,22 @@
                             <img src="images/Parceiros/reformar.jpg" alt="Reformar" class="partner-logo">
                         </div>
                         <div class="partner">
-                            <img src="images/Parceiros/ar gesso.png" alt="Gesso" class="partner-logo">
+                            <img src="images/Parceiros/gesso.png" alt="Gesso" class="partner-logo">
                         </div>
                         <div class="partner">
                             <img src="images/Parceiros/eletricos.jpg" alt="Elétricos" class="partner-logo">
                         </div>
                         <div class="partner">
-                            <img src="images/Parceiros/edielson hidraulica.jpg" alt="Edielson Hidráulica" class="partner-logo">
+                            <img src="images/Parceiros/hidraulica.jpg" alt="Edielson Hidráulica" class="partner-logo">
                         </div>
                         <div class="partner">
-                            <img src="images/Parceiros/victorious glass.jpg" alt="Victorious Glass" class="partner-logo">
+                            <img src="images/Parceiros/glass.jpg" alt="Victorious Glass" class="partner-logo">
                         </div>
                         <div class="partner">
-                            <img src="images/Parceiros/leroy merlin.png" alt="Leroy Merlin" class="partner-logo">
+                            <img src="images/Parceiros/leroy.png" alt="Leroy Merlin" class="partner-logo">
                         </div>
                         <div class="partner">
-                            <img src="images/Parceiros/casa mansur.jpg" alt="Casa Mansour" class="partner-logo">
+                            <img src="images/Parceiros/mansur.jpg" alt="Casa Mansour" class="partner-logo">
                         </div>
                     </div>
                 </div>
